log~
test.java:9: error: bad operand types for binary operator '||'
		for (i = 0; (((i < 10) && (i <= 9)) || i); ++i) {
		                                    ^
  first type:  boolean
  second type: int
test.java:39: error: bad operand types for binary operator '&&'
		if ((((((a < 3) && b) || (b - 2)) || b == 0) || ((b != 1) && (b - 1)))) {
		                ^
  first type:  boolean
  second type: int
test.java:39: error: bad operand types for binary operator '&&'
		if ((((((a < 3) && b) || (b - 2)) || b == 0) || ((b != 1) && (b - 1)))) {
		                                                          ^
  first type:  boolean
  second type: int
3 errors
euclid.java:8: error: bad operand type int for unary operator '!'
		if (!y) {
		    ^
1 error
euclid.java:8: error: bad operand type int for unary operator '!'
		if (!y) {
		    ^
1 error
euclid.java:8: error: bad operand type int for unary operator '!'
		if (!y) {
		    ^
1 error
fib.java:12: error: incompatible types
		for (; x; x >>= 1) {
		       ^
  required: boolean
  found: int
fib.java:13: error: incompatible types
			if (x & 1) {
			      ^
  required: boolean
  found: int
2 errors
fib.java:12: error: incompatible types
		for (; x; x >>= 1) {
		       ^
  required: boolean
  found: int
fib.java:13: error: incompatible types
			if (x & 1) {
			      ^
  required: boolean
  found: int
2 errors
fib.java:12: error: incompatible types
		for (; x; x >>= 1) {
		       ^
  required: boolean
  found: int
fib.java:13: error: incompatible types
			if (x & 1) {
			      ^
  required: boolean
  found: int
2 errors
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			    ^
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			             ^
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			                          ^
3 errors
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			    ^
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			             ^
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			                          ^
3 errors
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			    ^
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			             ^
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			                          ^
3 errors
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			    ^
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			             ^
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			                          ^
3 errors
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			    ^
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			             ^
queen.java:20: error: bad operand type int for unary operator '!'
			if (!b[i] && !l[i + x] && !r[i - x + n - 1]) {
			                          ^
3 errors
struct.java:38: error: incompatible types
		if (R.MICROSOFT) {
		     ^
  required: boolean
  found: int
1 error
struct.java:38: error: incompatible types
		if (R.MICROSOFT) {
		     ^
  required: boolean
  found: int
1 error
test.java:9: error: bad operand types for binary operator '||'
		for (i = 0; i < 10 && i <= 9 || i; ++i) {
		                             ^
  first type:  boolean
  second type: int
test.java:39: error: bad operand types for binary operator '&&'
		if (a < 3 && b || b - 2 || !b || b != 1 && b - 1) {
		          ^
  first type:  boolean
  second type: int
test.java:39: error: bad operand type int for unary operator '!'
		if (a < 3 && b || b - 2 || !b || b != 1 && b - 1) {
		                           ^
test.java:39: error: bad operand types for binary operator '&&'
		if (a < 3 && b || b - 2 || !b || b != 1 && b - 1) {
		                                        ^
  first type:  boolean
  second type: int
4 errors
